# guides

./: .gitignore  Cargo.toml  README.md
addressbook/src/: app.rs  lib.rs  main.rs  states.rs
addressbook/src/components/: action.rs  app.rs  callback.rs  event.rs  menu.rs  mod.rs  node.rs
addressbook/src/core/: default.rs  filesystem.rs  mod.rs  runtime.rs
crawler/: Cargo.toml
crawler/src/: main.rs
oauth-mini/: Cargo.toml
webapp-backend/: Cargo.toml
webapp-backend/src/: lib.rs  login.rs  main.rs
webapp-oauth/: Cargo.toml  client_secret_516738924199-iapd4m4egftj36tqbrlrokhebfst2oup.apps.googleusercontent.com.json
webapp-oauth/src/: lib.rs  main.rs
webapp-oauth/src/components/: login.rs  mod.rs  state.rs
webapp-oauth/src/pages/: auth.rs  mod.rs  signin.rs
webserver/src/: lib.rs  main.rs
webserver/src/http/: exception.rs  mod.rs  request.rs  response.rs  server.rs
webserver/src/parallel/: exception.rs  mod.rs  threadpool.rs
webserver/src/static/: 404.html
