[package]
name = "webapp-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.2"
serde = { version = "1", features = ["derive"] }
url = "2.2"
yew = "0.19"
yew-agent = "0.1"
yew-router = "0.16"